--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %}My Title{% endblock %}
 {% block body %}
-<h1>Welcome to the template</h1>
+<h1>MP's</h1>
+<ul>
+{% for mp in mps %}
+<li><a href="/mp/{{mp.aristotleid}}">{{mp.name}}</a></li>
+{% endfor %}
 {% endblock %}
